Tercera Entrega Fantastic v1.1

--- a/scss/reset/_mediaq.scss
+++ b/scss/reset/_mediaq.scss
@@ -33,6 +33,11 @@
     }
     .slider-frame{
         display: none;}
+        .container-all-historias img{
+            width: 100%;
+            float:left;
+            
+        }
     // .no-en-mobile{
     //     display: none;}
     @include galeria-medias;
