--- a/css/estilos.css
+++ b/css/estilos.css
@@ -177,7 +177,7 @@ nav a:hover:after {
   -webkit-box-shadow: 13px -8px 67px 5px rgba(158, 135, 87, 0.74);
   -moz-box-shadow: 13px -8px 67px 5px rgba(158, 135, 87, 0.74);
   box-shadow: 13px -8px 67px 5px rgba(158, 135, 87, 0.74);
-  width: 50%;
+  width: 70%;
   height: auto;
   margin: 0 auto;
   margin-top: 15px; }
@@ -386,22 +386,8 @@ h2 {
     width: 100%;
     margin: 0;
     padding: 10px; }
-  .gallery-item:nth-child(1) {
-    grid-column-start: span 2;
-    grid-row-start: span 2; }
-  .gallery-item:nth-child(5) {
-    grid-column-start: span 2;
-    grid-row-start: span 2; }
-  .gallery-item:nth-child(7) {
-    grid-column-start: span 1;
-    grid-row-start: span 3; }
-  .gallery-item:nth-child(8) {
-    grid-column-start: span 1;
-    grid-row-start: span 3; }
-  .gallery-item:nth-child(9) {
-    grid-row-start: span 3; }
   .gallery-item:nth-child(10) {
-    grid-column-start: span 2;
+    grid-column-start: span 3;
     grid-row-start: span 2; }
   .pie-pagina .grupo-1 {
     width: 90%;
@@ -414,6 +400,9 @@ h2 {
     grid-template-columns: auto; }
   .slider-frame {
     display: none; }
+  .container-all-historias img {
+    width: 100%;
+    float: left; }
   .contenedor-responsive {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -435,22 +424,8 @@ h2 {
     width: 100%;
     margin: 0;
     padding: 10px; }
-  .gallery-item:nth-child(1) {
-    grid-column-start: span 2;
-    grid-row-start: span 2; }
-  .gallery-item:nth-child(5) {
-    grid-column-start: span 2;
-    grid-row-start: span 2; }
-  .gallery-item:nth-child(7) {
-    grid-column-start: span 1;
-    grid-row-start: span 3; }
-  .gallery-item:nth-child(8) {
-    grid-column-start: span 1;
-    grid-row-start: span 3; }
-  .gallery-item:nth-child(9) {
-    grid-row-start: span 3; }
   .gallery-item:nth-child(10) {
-    grid-column-start: span 2;
+    grid-column-start: span 3;
     grid-row-start: span 2; } }
 
 /*fin estilos de media queries*/
