--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -67,29 +67,30 @@
       margin: 0;
       padding: 10px;;
   }
-  .gallery-item:nth-child(1){
-      grid-column-start: span 2;
-      grid-row-start: span 2;
-  }  
-  .gallery-item:nth-child(5){
-      grid-column-start: span 2;
-      grid-row-start: span 2;
-      }
-      .gallery-item:nth-child(7){
-        grid-column-start: span 1;
-        grid-row-start: span 3;}
-  .gallery-item:nth-child(8){
-    grid-column-start: span 1;
-    grid-row-start: span 3;
-      }
-  .gallery-item:nth-child(9){
-          grid-row-start: span 3;
-      }
+
+  // .gallery-item:nth-child(1){
+  //     grid-column-start: span 2;
+  //     grid-row-start: span 2;
+  // }  
+  // .gallery-item:nth-child(5){
+  //     grid-column-start: span 2;
+  //     grid-row-start: span 2;
+  //     }
+  //     .gallery-item:nth-child(7){
+  //       grid-column-start: span 1;
+  //       grid-row-start: span 3;}
+  // .gallery-item:nth-child(8){
+  //   grid-column-start: span 1;
+  //   grid-row-start: span 3;
+  //     }
+  // .gallery-item:nth-child(9){
+  //         grid-row-start: span 3;
+  //     }
   .gallery-item:nth-child(10){
-      grid-column-start: span 2;
+      grid-column-start: span 3;
       grid-row-start: span 2;
   }
-  }
+}
   
 
 @mixin boton-busqueda{
