--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -104,6 +104,10 @@
 
 .video-index{
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;}
+
+.video-history{
+    width: 50%;
+    height: 400px;
+    margin-bottom: 10px;   
 }
