Tercera Entrega Fantastic v1.4

--- a/scss/reset/_mediaq.scss
+++ b/scss/reset/_mediaq.scss
@@ -34,9 +34,9 @@
     .slider-frame{
         display: none;}
         .container-all-historias img{
-            width: 100%;
+            width: 70%;
             float:left;
-            
+            border-top: none;
         }
     // .no-en-mobile{
     //     display: none;}
