--- a/css/estilos.css
+++ b/css/estilos.css
@@ -229,8 +229,6 @@ nav a:hover:after {
 
 .container-all {
   width: 100%;
-  margin: auto;
-  padding: 60px;
   margin-top: 100px;
   border-top: 6px solid #9e8757; }
 
@@ -406,8 +404,9 @@ h2 {
   .slider-frame {
     display: none; }
   .container-all-historias img {
-    width: 100%;
-    float: left; }
+    width: 70%;
+    float: left;
+    border-top: none; }
   .contenedor-responsive {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
