--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -13,8 +13,8 @@
   
   .container-all {
     width: 100%;
-    margin: auto;
-    padding: 60px;
+    // margin: auto;
+    // padding: 60px;
     margin-top: 100px;
     border-top: 6px solid $color-principal; }
   
