--- a/css/estilos.css
+++ b/css/estilos.css
@@ -222,7 +222,7 @@ nav a:hover:after {
 /* Fin estilos del index*/
 /*Estilos Pages*/
 .titulo-tierra-agua {
-  font-size: 80px;
+  font-size: 50px;
   color: #9e8757;
   margin-bottom: 60px;
   text-align: center; }
@@ -241,11 +241,13 @@ nav a:hover:after {
 
 .container-all img {
   width: 300px;
-  float: left;
-  margin-right: 20px;
+  float: right;
+  margin-left: 20px;
   margin-bottom: 20px; }
 
 .container-all p {
+  margin-left: 10px;
+  margin-right: 30px;
   font-size: 20px;
   margin-top: 20px;
   color: white;
