--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -6,7 +6,7 @@
 @mixin estilos-pages{
 
 .titulo-tierra-agua {
-    font-size: 80px;
+    font-size: 50px;
     color: $color-principal;
     margin-bottom: 60px;
     text-align: center; }
@@ -27,11 +27,13 @@
   
   .container-all img {
     width: 300px;
-    float: left;
-    margin-right: 20px;
+    float: right;
+    margin-left: 20px;
     margin-bottom: 20px; }
   
   .container-all p {
+    margin-left: 10px;
+    margin-right: 30px;
     font-size: 20px;
     margin-top: 20px;
     color: white;
