--- a/css/estilos.css
+++ b/css/estilos.css
@@ -106,6 +106,10 @@ nav a:hover:after {
   transform-origin: left;
   transform: scaleX(1); }
 
+.navbar-toggler-icon {
+  border: 2px solid #9e8757;
+  background-color: #9e8757; }
+
 /*Fin de estilos de la barra de navegacion*/
 /* Estilos boton de volver arriba*/
 /* fin boton de volver arriba*/
